--- a/code/.eslintrc.json
+++ b/code/.eslintrc.json
@@ -4,10 +4,10 @@
         "es2021": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "standard",
         "prettier",
-        "prettier/react"
+        "prettier/react",
+        "plugin:react/recommended",
+        "standard"
     ],
     "parserOptions": {
         "ecmaFeatures": {
