--- a/code/package.json
+++ b/code/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "link": "react-native link"
   },
   "dependencies": {
