--- a/code/package.json
+++ b/code/package.json
@@ -33,6 +33,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
+    "detox": "^18.2.2",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-config-standard": "^16.0.2",
@@ -41,7 +42,8 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
+    "jest-circus": "^26.6.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
