--- a/code/.detoxrc.json
+++ b/code/.detoxrc.json
@@ -9,7 +9,7 @@
         "type": "iPhone 11"
       }
     },
-    "android.emu.release": {
+    "android": {
       "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
       "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
       "type": "android.emulator",
@@ -17,7 +17,7 @@
         "avdName": "Pixel_API_28_AOSP"
       }
     },
-    "android.emu.release.windows": {
+    "android.windows": {
       "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
       "build": "cd android; ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release; cd ..",
       "type": "android.emulator",
